--- a/packages/theme/css/next/palette/warning.css
+++ b/packages/theme/css/next/palette/warning.css
@@ -4,8 +4,6 @@
   --salt-palette-warning: var(--salt-color-orange-500);
   --salt-palette-warning-weaker: var(--salt-color-orange-200);
   --salt-palette-warning-weakest: var(--salt-color-orange-100);
-
-  --salt-palette-warning-action-hover: var(--salt-color-orange-100);
 }
 
 .salt-theme.salt-theme-next[data-mode="dark"] {
@@ -14,6 +12,4 @@
   --salt-palette-warning: var(--salt-color-orange-500);
   --salt-palette-warning-weaker: var(--salt-color-orange-800);
   --salt-palette-warning-weakest: var(--salt-color-orange-900);
-
-  --salt-palette-warning-action-hover: var(--salt-color-orange-900);
 }
